--- a/style.css
+++ b/style.css
@@ -1,8 +1,19 @@
+body {
+    background-image: url(assets/images/background-map.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+} 
+
 .title-class {
-    font-family:'Times New Roman', Times, serif;
+    font-family: 'Arial Black', sans-serif;
     color: #1e306c;
     text-align: center;
-    font-size: 36px;
+    font-size: 40px;
+    margin-top: 100px;
 }
 
 .search-container {
@@ -19,27 +30,35 @@
 }
 
 .search-button {
-    background-color: green;
+    background-color: rgb(66, 135, 205);
     color: white;
-    border-width: 2px;
-    border-radius: 25px;
-    font-size: 20px;
-    padding: 10px;
+    font-family: 'Arial', sans-serif;
+    border-radius: 15px;
+    font-size: 16px;
+    padding: 15px 30px;
     margin-left: 10px;
+    border-width: 1px;
+    border-color: rgb(26, 94, 161);
+    cursor: pointer;
 }
 
 .country-info { 
     margin-top: 20px;
-    font-family: 'Times New Roman', Times, serif;
     padding: 15px;
     margin: 10px;
+}
+
+.info-column {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    justify-content: center;
+    margin-left: 35px;
 }
 
 .country-info-text {
     text-align: center;
+    font-family: 'Arial', sans-serif;
     font-size: 20px;
     color: black;
     margin-top: 5px;
@@ -49,5 +68,15 @@
     border-style: solid;
     border-width: 1px;
     border-radius: 10px;
-    border-color: rgb(100, 100, 100);
+    border-color: rgb(144, 144, 144);
+    background-color: rgba(255, 255, 255, 0.8);
+    width: fit-content;
+    display: flex;
+    padding: 50px 120px;
+}
+
+.image-flag {
+    border-radius: 10px;
+    width: 200px;
+    height: auto;
 }
