--- a/style.css
+++ b/style.css
@@ -18,22 +18,26 @@ body {
 
 .search-container {
     display: flex;
-    justify-content: center;
+    align-items: center;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 35px; 
+    padding: 5px 10px; 
+    width: fit-content;
+    margin-bottom: 20px;
 }
 
 .input-class {
     text-align: center;
-    color: gray;
-    border-width: 1px;
-    border-radius: 15px;
     font-size: 18px;
+    border-color: transparent;
 }
 
 .search-button {
     background-color: rgb(66, 135, 205);
     color: white;
     font-family: 'Arial', sans-serif;
-    border-radius: 15px;
+    border-radius: 30px;
     font-size: 16px;
     padding: 15px 30px;
     margin-left: 10px;
@@ -94,7 +98,7 @@ body {
     background-color: rgba(255, 255, 255, 0.6);
     border: 1px solid #1e306c;
     border-radius: 20px;
-    padding: 5px 15px;
+    padding: 10px 25px;
     cursor: pointer;
     font-family: Arial, sans-serif;
     font-size: 14px;
