--- a/assets/images/Country finder_files/style.css
+++ b/assets/images/Country finder_files/style.css
@@ -10,11 +10,11 @@ body {
 
 .title-class {
     font-family: 'Arial Black', sans-serif;
-    color: #004581;
+    color: #084b84;
     text-align: center;
-    font-size: 50px;
+    font-size: 40px;
     margin-top: 100px;
-    text-shadow: #ffffff 4px 4px 4px;
+    text-shadow: #f2f0f8 2px 2px 4px;
 }
 
 .search-container {
@@ -45,10 +45,6 @@ body {
     border-width: 1px;
     border-color: rgb(26, 94, 161);
     cursor: pointer;
-}
-
-.search-button:hover {
-    background-color: rgb(26, 94, 161);
 }
 
 .country-info { 
@@ -100,18 +96,18 @@ body {
 }
 
 .history-bubble {
-    background-color: rgba(255, 255, 255, 0.687);
+    background-color: rgba(255, 255, 255, 0.6);
     border: 1px solid #1e306c;
     border-radius: 20px;
     padding: 10px 25px;
     cursor: pointer;
     font-family: Arial, sans-serif;
     font-size: 14px;
-    transition: all 0.2s;
+    transition: all 0.2s ease;
 }
 
 .history-bubble:hover {
     background-color: #1e306c;
     color: white;
-    transform: translateY(-5px);
+    transform: translateY(-2px);
 }
