--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@ body {
 
 .favorites-button:hover {
     background-color: #dcdcdc;
+    transform: translateY(-5px);
 }
 
 .history-button {
@@ -157,10 +158,13 @@ body {
     font-size: 14px;
     margin-bottom: 10px;
     margin-left: 10px;
+    
 }
 
 .history-button:hover {
     background-color: #dcdcdc;
+    transform: translateY(-5px);
+
 }
 
 .nav-container {
